[package]
name = "advent_of_code2019"
version = "0.1.0"
authors = ["Fredrik Jansson <frjansso@cisco.com>"]
edition = "2018"

[dependencies]
# itertools = "*"
# lazy_static = "*"
nom = {version = "6", features = ["regexp"]}
# num-rational = "0.3"
# pathfinding = "2"
# permutohedron = "0.2.4"
# rayon = "1"
regex = "*"
